--- a/bankservice.yml
+++ b/bankservice.yml
@@ -18,14 +18,14 @@ spring:
       ddl-auto: update
     show-sql: true
 
-# eureka:
-#  client:
-#    register-with-eureka: true
-#    fetch-registry: true
-#    service-url:
-#      defaultzone: http://localhost:8761/eureka/
-#  instance:
-#    hostname: localhost
+eureka:
+ client:
+   register-with-eureka: true
+   fetch-registry: true
+   service-url:
+     defaultzone: http://localhost:8761/eureka/
+ instance:
+   hostname: localhost
 
 server:
   port: 8080
