--- a/bank-service.yml
+++ b/bank-service.yml
@@ -24,7 +24,9 @@ spring:
         enabled: true
         auto-registration: true
         instance:
-          name: bank-service 
+          name: bank-service
+          prefer-ip-address: true  # Forces registration with IP instead of hostname
+          instance-id: ${spring.application.name}:${server.port}
 
 management:
   endpoints:
@@ -45,7 +47,8 @@ eureka:
     service-url:
       defaultzone: http://localhost:8761/eureka/
   instance:
-     hostname: localhost
+     prefer-ip-address: true  # Forces registration with IP instead of hostname
+     instance-id: ${spring.application.name}:${server.port}
 
 server:
   port: 8080
