--- a/Customer-Management-Service.yml
+++ b/Customer-Management-Service.yml
@@ -1,7 +1,7 @@
 spring:
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://localhost:3306/bank123_db
+    url: jdbc:mysql://localhost:3306/customer_db
     username: root
     password: root
 
