--- a/Admin-Server.yml
+++ b/Admin-Server.yml
@@ -1,6 +1,9 @@
-spring:
-  application:
-    name: Admin-Server
-    
+eureka:
+  client:
+   service-url:
+    defaultZone: http://localhost:8761/eureka/
+   register-with-eureka: true
+   fetch-registry: false
+
 server:
-  port: 1111 
+   port: 1111 
