--- a/customer-service.yml
+++ b/customer-service.yml
@@ -26,7 +26,7 @@ spring:
         enabled: true
         auto-registration: true
         instance:
-          name: bank-service
+          name: customer-service
           prefer-ip-address: true  # Forces registration with IP instead of hostname
           instance-id: ${spring.application.name}:${server.port}
 
@@ -52,4 +52,5 @@ eureka:
      prefer-ip-address: true  # Forces registration with IP instead of hostname
      instance-id: ${spring.application.name}:${server.port}
 
-
+server:
+  port: 2021
