--- a/customer-service.yml
+++ b/customer-service.yml
@@ -1,6 +1,6 @@
 spring:
   application:
-    name: customer-service
+    name: CUSTOMER-MGT-SERVICE
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
     url: jdbc:mysql://localhost:3306/finalproject_db
