--- a/customer-service.yml
+++ b/customer-service.yml
@@ -10,5 +10,14 @@ spring:
     hibernate:
       ddl-auto: update
     show-sql: true
+
+management:
+  endpoints:
+   web:
+    exposure:
+     include: "*" # or include: [ "health", "info", "metrics" ]
+  endpoint:
+   health:
+    show-details: always
 server:
   port: 2021
