--- a/lead-service1.yml
+++ b/lead-service1.yml
@@ -11,13 +11,13 @@ spring:
       ddl-auto: create
     show-sql: true
 
-management:
-  endpoints:
-   web:
-    exposure:
-     include: "*" # or include: [ "health", "info", "metrics" ]
-  endpoint:
-   health:
-    show-details: always
-server:
+# management:
+#   endpoints:
+#    web:
+#     exposure:
+#      include: "*" # or include: [ "health", "info", "metrics" ]
+#   endpoint:
+#    health:
+#     show-details: always
+# server:
   port: 3031
