--- a/customer-service.yml
+++ b/customer-service.yml
@@ -2,10 +2,10 @@ spring:
   application:
     name: CUSTOMER-MGT-SERVICE
   datasource:
-    driver-class-name: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://localhost:3306/finalproject_db
-    username: root
+    url: jdbc:postgresql://localhost:5432/finalproject_db # Postgres Dabatase URL
+    username: postgres
     password: root
+    driver-class-name: org.postgresql.Driver
   jpa:
     hibernate:
       ddl-auto: update
