--- a/customer-service.yml
+++ b/customer-service.yml
@@ -2,12 +2,14 @@ spring:
   application:
     name: CUSTOMER-MGT-SERVICE
   datasource:
-    url: jdbc:postgresql://localhost:5432/finalproject_db # Postgres Dabatase URL
-    username: postgres
+    driver-class-name: com.mysql.cj.jdbc.Driver
+    url: jdbc:mysql://localhost:3306/finalproject_db # Mysql Dabatase URL
+    username: root
     password: root
-    driver-class-name: org.postgresql.Driver
+
   jpa:
-    hibernate:
-      ddl-auto: update
-    show-sql: true
+      database-platform: org.hibernate.dialect.MySQL8Dialect
+      hibernate:
+        ddl-auto: create
+      show-sql: true
 
