--- a/order-service.yml
+++ b/order-service.yml
@@ -1,6 +1,6 @@
 spring:
   application:
-    name: ORDER-MGT-SERVICE
+    name: SALES-MGT-SERVICE
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
     url: jdbc:mysql://localhost:3306/finalproject_db # Mysql Dabatase URL
@@ -12,13 +12,5 @@ spring:
       hibernate:
         ddl-auto: create
       show-sql: true
-  boot:
-     admin:
-       client:
-         url: http://localhost:1111  # Admin Server URL
-         enabled: true
-         auto-registration: true
-         auto-deregistration: true  # <- This is important!
-         instance:
-            name: Sales-Service
+
  
