--- a/lead-service.yml
+++ b/lead-service.yml
@@ -17,6 +17,7 @@ spring:
         url: http://localhost:1111
         enabled: true
         auto-registration: true
+        auto-deregistration: true
         instance:
           name: lead-service
 
