--- a/sales-service.yml
+++ b/sales-service.yml
@@ -1,6 +1,6 @@
 spring:
   application:
-    name: ORDER-MGT-SERVICE
+    name: SALES-MGT-SERVICE
 
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
